hello motion system

--- a/sketches/motion-system/style.css
+++ b/sketches/motion-system/style.css
@@ -1,5 +1,24 @@
+body {
+  overflow: hidden;
+}
+
 .grid {
   display: grid;
   height: 100dvh;
   grid-template-columns: repeat(var(--columns), 1fr);
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* transform: translateY(calc(var(--offset) + var(--y))); */
+  /* transform: translateY(calc(var(--y))); */
+}
+
+.column-layer {
+  flex: none;
+  height: 100%;
+  width: 100%;
+  background: var(--gradient);
 }
