--- a/sketches/splitters-simple/style.css
+++ b/sketches/splitters-simple/style.css
@@ -4,13 +4,10 @@ body {
 }
 
 #app {
-  /* display: grid; */
-  /* gap: 10px; */
-  /* grid-template-columns: repeat(auto-fit, minmax(10px, 1fr)); */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
   /* grid-template-rows: repeat(auto-fit, minmax(10px, 1fr)); */
-  /* grid-auto-rows: 1fr; */
   height: 100%;
-  /* background: green; */
 }
 
 .full-width {
